# SDFBezier

./: .gitmodules  CMakeLists.txt  README.md  bezier.py  main.cpp  polynom.py  premake5.lua
Mylib/: Bezier.cpp  Bezier.h  CMakeLists.txt  Contour.cpp  Contour.h  Glyph.cpp  Glyph.h  Renderer.cpp  Renderer.h
SDFBezier/: imgui.ini  premake5.lua
SDFBezier/TMP/: Bitmap.hpp  BitmapRef.hpp  arithmetics.hpp
SDFBezier/outdated/: Bezier.cpp  Bezier.h  Draw.cpp  Draw.h  Poly.cpp
SDFBezier/src/: Bezier.cpp  Bezier.h  Contour.cpp  Contour.h  Draw.cpp  Draw.h  Glyph.cpp  Glyph.h  Outline.cpp  Outline.h  Poly.cpp  Poly.h  Renderer.cpp  Renderer.h  SolveQuinticGPU.cpp  SolveQuinticGPU.h  Tmp.cpp  Tmp.h  WalnutApp.cpp  comp.spv  init.comp  init.spv  main.cpp  shader.comp
TMP/: Bitmap.h  CMakeLists.txt  Vector2.cpp  Vector2.h  bitmap-interpolation.hpp  pixel-conversion.hpp  render-sdf.cpp  render-sdf.h
script/: compileShader.bat  compileShaders.bat
shaders/: TestBezier.comp  TestBezier.spv  bezier.comp  bezier.glsl  bezier.spv  buildCoef.comp  buildCoef.spv  case2.comp  case3.comp  case3.spv  computePointsCurves.comp  computePointsCurves.spv  cubic.spv  dot.comp  final.comp  final.spv  generateImage.comp  generateImage.glsl  init.comp  init.spv  quadratic.comp  quadratic.spv  solve.comp  solve.spv  tmp.spv
shaders/case2/: buildCoef.comp  final.comp  solve.comp
shaders/case3/: buildCoef.comp  final.comp  init.comp  solve.comp
shaders/case4/: buildCoef.comp  final.comp  init.comp  solve.comp
